--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 this is ....
-资源下载
-<a href='https://www.diediao.net/p/102940-1-1.html'>我不是药神</a>
+资源
+<a href='https://www.diediao.net/p/102940-1-1.html' target=_blank>我不是药神</a>
