--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href='https://www.diediao.net/p/102940-1-1.html' target=_blank>我不是药神</a>
+<a href='www.baidu.com' target=_blank data-url='magnet:?xt=urn:btih:C4685404F9BE9892330EF3467ACC4DAB6A5B8DAB'>我不是药神</a>
