--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<a href='www.baidu.com' target=_blank data-url='magnet:?xt=urn:btih:C4685404F9BE9892330EF3467ACC4DAB6A5B8DAB'>我不是药神</a>
+<a class='wbsys_class' id='wbsys' href='www.baidu.com' target=_blank data-url='magnet:?xt=urn:btih:C4685404F9BE9892330EF3467ACC4DAB6A5B8DAB'>我不是药神</a>
+<script>
+element=document.getElementById('wbsys');
+url=element.getAttribute("data-url");
+  alert(url);
+  </script>
