--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<a class='wbsys_class' id='wbsys' href='www.baidu.com' target=_blank data-url='magnet:?xt=urn:btih:C4685404F9BE9892330EF3467ACC4DAB6A5B8DAB'>我不是药神</a>
+<div class='wbsys_class' id='wbsys' href='www.baidu.com' target=_blank data-url='magnet:?xt=urn:btih:C4685404F9BE9892330EF3467ACC4DAB6A5B8DAB'>我不是药神</div>
 <script>
 element=document.getElementById('wbsys');
 url=element.getAttribute("data-url");
-  alert(url);
-  </script>
+  element.onclick = function(){
+   alert(url);
+}
+</script>
