--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-点击获取下载地址：<div style='cursor: pointer;' class='wbsys_class' id='wbsys' href='www.baidu.com' target=_blank data-url='magnet:?xt=urn:btih:C4685404F9BE9892330EF3467ACC4DAB6A5B8DAB'>我不是药神</div>
+点击获取下载地址：<div style='cursor: pointer;' class='wbsys_class' id='wbsys' href='www.baidu.com' target=_blank data-url='magnet:?xt=urn:btih:C4685404F9BE9892330EF3467A(--https://benbtx.github.io/--)CC4DAB6A5B8DAB'>我不是药神</div>
 <script>
 element=document.getElementById('wbsys');
 url=element.getAttribute("data-url");
